# exegete

./: .gitignore  AUTHORS.md  COPYRIGHT.md  README.md  collectstatic.sh  docker-compose.yml
.github/workflows/: codeql-analysis.yml  main.yml
backend/: Dockerfile  README.md  docker-entrypoint.sh  localdev-import.sh  localdev.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c9ce07d9c84_.py  1efc929f1ef0_.py  2ac3615e99d6_.py  7d9f294975a5_.py  9d793cf691c9_.py  ba023fe267ba_.py  ed0fc129fac8_.py  fd14d0b796c7_.py
backend/exegete/: cli.py  settings.py
backend/exegete/api/: app.py  database.py  db.py  models.py  redis.py  register.py  schemas.py  users.py
backend/exegete/api/routers/: api.py  config.py  scripture.py  workspace.py
backend/exegete/api/scripture/: catalog.py
backend/exegete/captcha/: __init__.py
backend/exegete/comms/: mailgun.py
backend/exegete/text/: __init__.py  cleanup.py
backend/exegete/text/ingest/: netbible.py  njps.py  sblgnt.py
backend/exegete/workspace/: manager.py  v1_workspace.json
backend/scripts/: run-import.sh
exegete/: Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
exegete/exegete/: asgi.py  settings.py  urls.py  views.py  wsgi.py
exegete/exegete/textapi/: apps.py  urls.py
exegete/exegete/textapi/management/commands/: ingest_netbible.py  ingest_sblgnt.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json  news.md
frontend/public/md-content/: news.md
frontend/src/: App.css  App.tsx  index.tsx  setupProxy.js
frontend/src/api/: api.tsx  apiauth.tsx  mdcontent.tsx
frontend/src/colours/: distinguishable.tsx
frontend/src/components/: About.tsx  Autosave.tsx  Cell.tsx  Disclaimer.tsx  Footer.tsx  ForgotPassword.tsx  GospelParallelModal.tsx  GuestHome.tsx  Header.tsx  HighlightRepetition.tsx  HighlightRepitition.tsx  Home.tsx  Login.tsx  ModuleButton.tsx  ModuleInfo.tsx  NewWorkspaceButton.tsx  News.tsx  NotFound.tsx  Privacy.tsx  Register.tsx  ResetPassword.tsx  ScriptureAnnotation.tsx  ScriptureEditor.tsx  ScriptureViewer.tsx  UserHome.tsx  UserProvider.tsx  Verify.tsx  VerseRefPicker.tsx  Workspace.tsx  WorkspaceList.tsx  WorkspaceView.tsx
frontend/src/components/Cells/: Error.tsx  InnerTexture.tsx  MarkdownNote.tsx  Parallel.tsx  Scripture.tsx  ScriptureViewer.tsx
frontend/src/components/IntertextureToolbar/: IntertextureToolbar.tsx  Perseus.tsx  Types.tsx
frontend/src/components/Routes/: About.tsx  Disclaimer.tsx  ForgotPassword.tsx  Module.tsx  NotFound.tsx  Privacy.tsx  Register.tsx  ResetPassword.tsx  VerifyEmail.tsx  Workspace.tsx
frontend/src/components/Routes/Home/: GuestHome.tsx  Home.tsx  UserHome.tsx
frontend/src/components/Routes/Workspace/: CellView.tsx  DeleteWorkspaceModal.tsx  EditMenu.tsx  (+9 more)
frontend/src/components/ScriptureEditor/: HoveringToolbar.tsx  ScriptureEditor.tsx  Style.tsx  Types.tsx  VerseRef.tsx  Word.tsx
frontend/src/components/ScriptureViewer/: ScriptureTextView.tsx  ScriptureViewer.tsx
frontend/src/config/: Config.tsx
frontend/src/exegete/: store.tsx  toolbar.tsx
frontend/src/fonts/: README.md
frontend/src/parallels/: GospelParallels.test.tsx  GospelParallels.tsx  ParallelsCache.tsx
frontend/src/scripture/: Highlighter.tsx  ParserCache.tsx  Scripture.tsx  ScriptureAPI.tsx  ScriptureAnnotation.tsx  ScriptureCatalog.tsx  ScriptureText.tsx  ScriptureTextView.tsx
frontend/src/sources/: Sources.tsx
frontend/src/testassets/: TestCatalog.ts  update.sh
frontend/src/user/: JWT.tsx  User.tsx
frontend/src/util/: Scroll.tsx  ScrollToTop.tsx  useInput.tsx
frontend/src/verseref/: BookAbbreviations.tsx  GospelParallels.tsx  VerseComparison.tsx  VerseRef.test.tsx  VerseRef.tsx  VerseRefParser.tsx  VerseRefPicker.tsx
frontend/src/workspace/: APIWorkspaceStorage.tsx  Autosave.tsx  Cell.tsx  CellRegistry.tsx  Get.tsx  History.tsx  LocalWorkspaceStorage.tsx  New.tsx  Types.tsx  Workspace.tsx  WorkspaceMigrations.tsx  WorkspaceProvider.tsx
postgis/: Dockerfile  build.sh
static/: Dockerfile  default.conf
textapi/: README.md
usfmpy/: README.md  pyproject.toml
usfmpy/usfmpy/: cli.py
usfmpy/usfmpy/data/: README.md
usfmpy/usfmpy/usfm/: __init__.py  document.py  stylesheet.py  test_tokeniser.py  tokenizer.py
