[tool.poetry]
name = "exegete"
version = "0.1.0"
description = "backend for exegete.app"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
pydantic = "^2.5.3"  # 2.0 breaks fastapi-users at the moment
jsonschema = "^4.21.0"
lxml = "^5.1.0"
aiohttp = "^3.9.1"
alembic = "^1.13.1"
nltk = "^3.8.1"
requests = "^2.31.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
watchfiles = "^0.21.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.283"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
