[project]
name = "exegete"
version = "0.1.0"
description = "backend for exegete.app"
authors = [{ name = "Grahame Bowland", email = "grahame@bowland.au" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "fastapi-users[sqlalchemy]",
    "pydantic",
    "jsonschema",
    "lxml",
    "aiohttp",
    "alembic",
    "nltk",
    "requests",
    "asyncpg",
    "redis",
    "watchfiles",
    "psycopg2",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "black>=24.1.1,<25",
    "pyright>=1.1.283,<2",
    "ruff>=0.0.290,<0.0.291",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exegete"]

[tool.ruff]
ignore = ["E501"]
