[tool.poetry]
name = "exegete"
version = "0.1.0"
description = "backend for grahame.dev"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
redis-lock = "^0.2.0"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.2"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
uvicorn = "^0.13.4"
django-redis = "^4.12.1"
dj-rest-auth = "^2.1.5"
SQLAlchemy = "^1.4.17"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
